src/objects/BMCServiceDesk__SRM_RequestDetail__c.object
<CustomObject>
    <description>Stores the details of a service request that is submitted by a user.</description>
    <fields>
        <fullName>BMCServiceDesk__ApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttachmentRefGeneratorId__c</fullName>
        <description>This field allows you to store an unique identification number for attachments (URL or File types).
		When you attach a file or URL while creating a service request by using the cart, the attachments are stored using the &quot;Attachment Reference Generator&quot; object mapping and the same reference is stored in this field along with request details.
		When the cart is saved, these mapped attachments are associated with the respective requests (incidents those were created from service requests) by using the references stored in this field.</description>
        <label>Temporary Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Installed Server</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Concurrent user</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Storage in GB</fullName>
                </value>
                <value>
                    <fullName>Storage in TB</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomerPrice__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DateExpected__c</fullName>
        <label>Date Expected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DateRequired__c</fullName>
        <label>Date Required</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeliveryCost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Incident</relationshipLabel>
        <relationshipName>Request_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Definition</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
        <relationshipName>RequestDefinition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Prefix_the_Prompt_Question_to_user_input__c</fullName>
        <formula>BMCServiceDesk__FKRequestDefinition__r.BMCServiceDesk__Prefix_Prompt_to_user_input__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefix the Prompt/Question to user input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption1__c</fullName>
        <label>Price Option1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Installed Server</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Concurrent user</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>Storage in GB</fullName>
                </value>
                <value>
                    <fullName>Storage in TB</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PriceOption2__c</fullName>
        <label>Price Option2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SRDUrl__c</fullName>
        <inlineHelpText>Use this field to enter a URL that provides more information</inlineHelpText>
        <label>URL For More Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceRequest__c</fullName>
        <description>Name of associated service request definition.</description>
        <inlineHelpText>Name of associated service request definition.</inlineHelpText>
        <label>Service Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalPrice__c</fullName>
        <formula>BMCServiceDesk__CustomerPrice__c  *  BMCServiceDesk__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Cost__c</fullName>
        <formula>BMCServiceDesk__DeliveryCost__c *  BMCServiceDesk__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Request Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Quantity_Required</fullName>
        <active>true</active>
        <errorConditionFormula>BMCServiceDesk__Quantity__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__Quantity__c</errorDisplayField>
        <errorMessage>Quantity should be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__dateRequiredLaterthanCurrentDate</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; BMCServiceDesk__DateRequired__c &lt;= NOW()) ||( ISCHANGED(BMCServiceDesk__DateRequired__c) &amp;&amp;  BMCServiceDesk__DateRequired__c &lt;= NOW())</errorConditionFormula>
        <errorMessage>The Date Required should not be earlier than the current date and time</errorMessage>
    </validationRules>
</CustomObject>